--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		<spinnaker.version>0.0.1-SNAPSHOT</spinnaker.version>
 		<slf4j.version>1.7.25</slf4j.version>
 		<junit.version>5.2.0</junit.version>
+		<checkstyle.version>8.18</checkstyle.version>
   	</properties>
 
 	<dependencyManagement>
@@ -204,7 +205,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 						<dependency>
 							<groupId>com.puppycrawl.tools</groupId>
 							<artifactId>checkstyle</artifactId>
-							<version>8.10.1</version>
+							<version>${checkstyle.version}</version>
 						</dependency>
 					</dependencies>
 				</plugin>
